# DocuMind-Document-Intelligence-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/src/: config.py  test_embeddings.py  test_ingestion.py  test_rag.py
backend/src/api/: app.py
backend/src/ingestion/: chunking.py  embeddings.py  loader.py
backend/src/rag_pipeline/: __init__.py
backend/src/retriever/: retriever.py
documind-frontend/: index.html  package-lock.json  tailwind.config.js
documind-frontend/src/: App.jsx  index.css
documind-frontend/src/components/: Loader.jsx  MessageBubble.jsx  Navbar.jsx
documind-frontend/src/pages/: Chat.jsx  Home.jsx
documind-frontend/src/services/: api.js
